re factored logic for getting file icons into a seperate class. fixed issue preventing icons from being re trieved correctly.

--- a/FolderContentsExtension.csproj
+++ b/FolderContentsExtension.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FolderContentsExtension.cs" />
+    <Compile Include="Shellicon.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
